tests/pos/multi_files/src/main/scala/Data.scala
case class Data(name: String, value: Int)
