tests/neg/duplicate_class/src/main/scala/File2.scala
case class Foo(y: String)
